adicionando texto apos imagem

--- a/index.html
+++ b/index.html
@@ -23,10 +23,11 @@
         </form>
 
         <picture id="#resultado">
-            <img id="img" alt="imagem-nasa" style="text-align: center;" src="">
-            <iframe id="video" src=""></iframe>
+            <img id="img" alt="imagem-nasa" width="500px" height="300px" style="text-align: center;" src="">
+            <iframe id="video" width="500px" height="300px" src=""></iframe>
         </picture>
 
+        <div class="texto"></div>
         <div id="msg-erro"></div>
 
     </main>
